--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@deriv-com/ui",
+    "name": "@deriv-com/quill-ui",
     "private": false,
     "version": "0.0.1",
     "type": "module",
