--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@deriv-com/quill-ui",
     "private": false,
-    "version": "0.0.2",
+    "version": "0.0.0-development",
     "type": "module",
     "main": "dist/main.js",
     "files": [
@@ -38,7 +38,6 @@
         "@babel/preset-react": "^7.23.3",
         "@babel/preset-typescript": "^7.23.3",
         "@semantic-release/changelog": "^6.0.3",
-        "@semantic-release/git": "^10.0.1",
         "@semantic-release/github": "^9.2.6",
         "@semantic-release/npm": "^11.0.2",
         "@semantic-release/release-notes-generator": "^12.1.0",
