chore: update storybook output directory

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "format": "npx prettier . --write",
         "preview": "vite preview",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build",
+        "build-storybook": "storybook build --output-dir dist/storybook",
         "test": "jest"
     },
     "devDependencies": {
