--- a/.github/workflows/publish_npm_package.yml
+++ b/.github/workflows/publish_npm_package.yml
@@ -34,9 +34,7 @@ jobs:
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
         run: npm audit signatures
       - name: Prepublish
-        run: |
-            git push --dry-run --tags
-            npm run prepublish
+        run: npm run prepublish
       - name: Release
         if: success()
         env:
