--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build --output-dir dist/storybook",
         "test": "jest",
-        "clean:dist": "rm -rf dist"
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.23.9",
         "@babel/preset-react": "^7.23.3",
         "@babel/preset-typescript": "^7.23.3",
+        "@commitlint/cli": "^19.1.0",
+        "@commitlint/config-conventional": "^19.1.0",
         "@semantic-release/changelog": "^6.0.3",
         "@semantic-release/github": "^9.2.6",
         "@semantic-release/npm": "^11.0.2",
@@ -86,7 +88,8 @@
         "vite": "^5.0.12",
         "vite-plugin-classname": "^0.0.3",
         "vite-plugin-dts": "^3.7.1",
-        "vite-plugin-lib-inject-css": "^1.3.0"
+        "vite-plugin-lib-inject-css": "^1.3.0",
+        "husky": "^8.0.0"
     },
     "eslintConfig": {
         "env": {
