--- a/package.json
+++ b/package.json
@@ -44,15 +44,15 @@
     "@semantic-release/github": "^9.2.6",
     "@semantic-release/npm": "^11.0.2",
     "@semantic-release/release-notes-generator": "^12.1.0",
-    "@storybook/addon-essentials": "^8.0.0",
-    "@storybook/addon-interactions": "^8.0.0",
-    "@storybook/addon-links": "^8.0.0",
-    "@storybook/addon-onboarding": "^8.0.0",
-    "@storybook/addon-themes": "^8.0.0",
-    "@storybook/blocks": "^8.0.0",
-    "@storybook/react": "^8.0.0",
-    "@storybook/react-vite": "^8.0.0",
-    "@storybook/test": "^8.0.0",
+    "@storybook/addon-essentials": "^8.0.1",
+    "@storybook/addon-interactions": "^8.0.1",
+    "@storybook/addon-links": "^8.0.1",
+    "@storybook/addon-onboarding": "^8.0.1",
+    "@storybook/addon-themes": "^8.0.1",
+    "@storybook/blocks": "^8.0.1",
+    "@storybook/react": "^8.0.1",
+    "@storybook/react-vite": "^8.0.1",
+    "@storybook/test": "^8.0.1",
     "@tanstack/react-table": "^8.12.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
@@ -84,7 +84,7 @@
     "sass": "^1.69.7",
     "sass-loader": "^13.3.3",
     "semantic-release": "^23.0.0",
-    "storybook": "^8.0.0",
+    "storybook": "^8.0.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.12",
@@ -123,6 +123,7 @@
     }
   },
   "dependencies": {
+    "@deriv/quill-icons": "^1.19.5",
     "usehooks-ts": "^3.0.1"
   }
 }
