--- a/package.json
+++ b/package.json
@@ -123,6 +123,8 @@
         }
     },
     "dependencies": {
+        "@deriv/quill-icons": "^1.19.5",
+        "@headlessui/react": "^1.7.18",
         "usehooks-ts": "^3.0.1"
     }
 }
