chore: add initial action sheet

--- a/package.json
+++ b/package.json
@@ -126,6 +126,8 @@
         }
     },
     "dependencies": {
+        "@deriv/quill-icons": "^1.19.10",
+        "@use-gesture/react": "^10.3.1",
         "usehooks-ts": "^3.0.1"
     }
 }
