--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "dev": "vite --port 4321 --open",
         "build": "tsc -p ./tsconfig-build.json && vite build",
         "prepublish": "npm run build",
-        "generate:style": "node scripts/transformer.js &&  npx prettier --write lib/styles",
+        "generate:styles": "node scripts/transformer.js &&  npx prettier --write lib/styles",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "format": "npx prettier . --write",
         "preview": "vite preview",
