--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
     "compilerOptions": {
+        "baseUrl": "./",
+        "paths": {
+            "@components/*": ["lib/components/*"],
+            "@hooks/*": ["lib/hooks/*"],
+            "@providers/*": ["lib/providers/*"],
+            "@utils/*": ["lib/utils/*"]
+          },
         "target": "ES2020",
         "useDefineForClassFields": true,
         "lib": ["ES2020", "DOM", "DOM.Iterable"],
