--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
+        "@use-gesture/react": "^10.3.1",
         "@vitejs/plugin-react": "^4.2.1",
         "@zxcvbn-ts/core": "^3.0.4",
         "@zxcvbn-ts/language-common": "^3.0.4",
@@ -126,6 +127,7 @@
         }
     },
     "dependencies": {
+        "@deriv/quill-icons": "^1.19.20",
         "usehooks-ts": "^3.0.1"
     }
 }
