--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "dependencies": {
         "@deriv/quill-icons": "^1.19.8",
         "@headlessui/react": "^1.7.18",
+        "react-swipeable": "^7.0.1",
         "usehooks-ts": "^3.0.1"
     }
 }
