--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     },
     "scripts": {
         "dev": "vite --port 4321 --open",
-        "build": "tsc -p ./tsconfig-build.json && vite build",
+        "build": "tsc -p ./tsconfig-build.json && vite build && npm run generate:styles",
         "prepublish": "npm run build",
         "generate:styles": "node scripts/transformer.js &&  npx prettier --write lib/styles",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
