--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
             "@components/*": ["lib/components/*"],
             "@hooks/*": ["lib/hooks/*"],
             "@providers/*": ["lib/providers/*"],
-            "@utils/*": ["lib/utils/*"]
+            "@utils/*": ["lib/utils/*"],
+            "@types": ["lib/types.ts"]
         },
         "target": "ES2020",
         "useDefineForClassFields": true,
