--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
     "dependencies": {
         "@deriv/quill-icons": "^1.19.20",
         "@headlessui/react": "^1.7.18",
-        "usehooks-ts": "^3.0.2",
-        "react-swipeable": "^6.2.1"
+        "react-swipeable": "^6.2.1",
+        "react-uuid": "^2.0.0",
+        "usehooks-ts": "^3.0.2"
     }
 }
