--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
         "@deriv/quill-icons": "^1.19.20",
         "@headlessui/react": "^1.7.18",
         "usehooks-ts": "^3.0.2",
-        "react-swipeable": "^6.2.1"
+        "react-swipeable": "^6.2.1",
+        "react-uuid": "^2.0.0"
     }
 }
