--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@deriv/quill-ui",
+    "name": "@deriv-com/quill-ui",
     "private": false,
     "version": "0.0.0-development",
     "type": "module",
