--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -40,7 +40,7 @@
 #  wojciech-deriv
 #  markwylde-deriv
 #  prince-deriv
-#  bala-deriv
+#  balakrishna-deriv
 
 ######################################################################################################
 #
@@ -60,5 +60,5 @@
 # (in case no pattern matches a path in a PR - this should be treated as a bug and result in adding the path to CODEOWNERS)
 # ==============================================================
 
-*                                                               @ali-hosseini-deriv @yashim-deriv @wojciech-deriv @markwylde-deriv @prince-deriv @bala-deriv
+*                                                               @ali-hosseini-deriv @yashim-deriv @wojciech-deriv @markwylde-deriv @prince-deriv @balakrishna-deriv
 
