--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
     "private": false,
     "version": "0.0.0-development",
     "type": "module",
-    "main": "dist/main.js",
+    "main": "dist/main.cjs", 
     "files": [
         "dist"
     ],
     "types": "./dist/main.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/main.js",
+            "require": "./dist/main.cjs", 
+            "import": "./dist/main.mjs", 
             "types": "./dist/main.d.ts"
         }
     },
@@ -37,6 +38,7 @@
         "prepare": "husky install"
     },
     "devDependencies": {
+        "rimraf": "^3.0.2",
         "@babel/preset-env": "^7.23.9",
         "@babel/preset-react": "^7.23.3",
         "@babel/preset-typescript": "^7.23.3",
