--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "exports": {
         ".": {
             "import": "./dist/main.js",
+            "require": "./dist/main.cjs",
             "types": "./dist/main.d.ts"
         },
         "./styles": {
