--- a/package.json
+++ b/package.json
@@ -145,5 +145,9 @@
         "react-tiny-popover": "^8.0.4",
         "usehooks-ts": "^3.0.2",
         "uuid": "^9.0.1"
+    },
+    "resolutions": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
