--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
         "@types/jest": "^29.5.12",
         "@types/node": "^20.10.7",
         "@types/react": "^18.2.43",
-        "@types/react-dom": "^18.2.17",
+        "@types/react-dom": "^18.3.0",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "@use-gesture/react": "^10.3.1",
@@ -86,14 +86,14 @@
         "eslint-plugin-react-refresh": "^0.4.5",
         "eslint-plugin-storybook": "^0.8.0",
         "glob": "^10.3.10",
-        "husky": "^8.0.0",
+        "husky": "^9.0.11",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "lint-staged": "^15.2.2",
         "prettier": "3.2.5",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react-dom": "^18.3.1",
         "sass": "^1.69.7",
         "sass-loader": "^13.3.3",
         "semantic-release": "^23.0.0",
@@ -139,11 +139,15 @@
     },
     "dependencies": {
         "@deriv/quill-icons": "^1.22.10",
-        "@headlessui/react": "^1.7.18",
+        "@headlessui/react": "^2.0.4",
         "react-calendar": "^5.0.0",
         "react-swipeable": "^6.2.1",
         "react-tiny-popover": "^8.0.4",
         "usehooks-ts": "^3.0.2",
         "uuid": "^9.0.1"
+    },
+    "resolutions": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
