--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
             "@hooks/*": ["lib/hooks/*"],
             "@providers/*": ["lib/providers/*"],
             "@utils/*": ["lib/utils/*"],
-            "@types": ["lib/types.ts"],
-            "@test-utils": ["lib/test-utils"]
+            "@types": ["lib/types.ts"]
         },
         "target": "ES2020",
         "useDefineForClassFields": true,
