--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "lint-staged": "^15.2.2",
+        "mock-match-media": "^0.4.3",
         "prettier": "3.2.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -133,7 +134,8 @@
             "^@components(.*)$": "<rootDir>/lib/components$1",
             "^@hooks(.*)$": "<rootDir>/lib/hooks$1",
             "^@providers(.*)$": "<rootDir>/lib/providers$1",
-            "^@utils(.*)$": "<rootDir>/lib/utils$1"
+            "^@utils(.*)$": "<rootDir>/lib/utils$1",
+            "^@test-utils": "<rootDir>/lib/test-utils"
         },
         "globalSetup": "<rootDir>/globalSetup.js"
     },
