fix: remove reset.css that will break ui

--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
         "@deriv/quill-icons": "^1.22.10",
         "@headlessui/react": "1.7.18",
         "dayjs": "^1.11.11",
+        "modern-normalize": "^2.0.0",
         "react-calendar": "^5.0.0",
         "react-number-format": "^5.4.0",
         "react-swipeable": "^6.2.1",
