--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "@types/lodash.debounce": "^4.0.7",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
+        "@types/react-transition-group": "^4.4.4",
         "@use-gesture/react": "^10.3.1",
         "@vitejs/plugin-react": "^4.2.1",
         "@zxcvbn-ts/core": "^3.0.4",
@@ -152,6 +153,7 @@
         "react-calendar": "^5.0.0",
         "react-number-format": "^5.4.0",
         "react-swipeable": "^6.2.1",
+        "react-transition-group": "4.4.2",
         "react-tiny-popover": "^8.0.4",
         "usehooks-ts": "^3.0.2",
         "uuid": "^9.0.1"
