fix: update branch in workflow

--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -1,7 +1,7 @@
 name: Build and test
 on:
   pull_request:
-    branches: [main]
+    branches: [master]
 
 permissions:
   contents: read # for checkout
