--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -30,6 +30,10 @@ jobs:
         run: npm clean-install
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
         run: npm audit signatures
+      - name: Clear GitHub Actions Cache
+        run: |
+            rm -rf ${{ runner.temp }}/_github_home
+            rm -rf ${{ runner.temp }}/_github_workflow
       - name: Prepublish
         run: npm run prepublish
       - name: Build Storybook
