--- a/package.json
+++ b/package.json
@@ -71,9 +71,9 @@
         "@types/node": "^20.10.7",
         "@types/react": "18.2.43",
         "@types/react-dom": "18.2.17",
+        "@types/react-transition-group": "^4.4.4",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
-        "@types/react-transition-group": "^4.4.4",
         "@use-gesture/react": "^10.3.1",
         "@vitejs/plugin-react": "^4.2.1",
         "@zxcvbn-ts/core": "^3.0.4",
@@ -147,13 +147,13 @@
     "dependencies": {
         "@deriv-com/quill-tokens": "^2.0.8",
         "@deriv/quill-icons": "^1.22.10",
-        "@headlessui/react": "1.7.18",
+        "@headlessui/react": "^2.1.2",
         "dayjs": "^1.11.11",
         "react-calendar": "^5.0.0",
         "react-number-format": "^5.4.0",
         "react-swipeable": "^6.2.1",
-        "react-transition-group": "4.4.2",
         "react-tiny-popover": "^8.0.4",
+        "react-transition-group": "4.4.2",
         "usehooks-ts": "^3.0.2",
         "uuid": "^9.0.1"
     },
