chore: add test case and fix ui issue

--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     "dependencies": {
         "@deriv-com/quill-tokens": "^2.0.8",
         "@deriv/quill-icons": "^1.22.10",
-        "@headlessui/react": "^2.1.2",
+        "@headlessui/react": "1.7.18",
         "dayjs": "^1.11.11",
         "react-calendar": "^5.0.0",
         "react-number-format": "^5.4.0",
