--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
         "dayjs": "^1.11.11",
         "react-calendar": "^5.0.0",
         "react-number-format": "^5.4.0",
+        "react-router-dom": "^6.26.1",
         "react-swipeable": "^6.2.1",
         "react-tiny-popover": "^8.0.4",
         "react-transition-group": "4.4.2",
