--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@storybook/addon-onboarding": "^8.0.5",
         "@storybook/addon-themes": "^8.0.5",
         "@storybook/blocks": "^8.0.5",
+        "@storybook/builder-vite": "^8.2.9",
         "@storybook/react": "^8.0.5",
         "@storybook/react-vite": "^8.0.5",
         "@storybook/test": "^8.2.7",
