--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "@storybook/react": "^8.0.5",
         "@storybook/react-vite": "^8.0.5",
         "@storybook/test": "^8.2.7",
+        "@storybook/builder-vite": "^8.2.9",
         "@tanstack/react-table": "^8.12.0",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
