chore: cleanup code

--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
         "dayjs": "^1.11.11",
         "react-calendar": "^5.0.0",
         "react-number-format": "^5.4.0",
+        "react-swipeable": "^6.2.1",
         "react-tiny-popover": "^8.0.4",
         "react-transition-group": "4.4.2",
         "usehooks-ts": "^3.0.2",
