--- a/package.json
+++ b/package.json
@@ -54,16 +54,17 @@
         "@semantic-release/github": "^10.0.2",
         "@semantic-release/npm": "^12.0.0",
         "@semantic-release/release-notes-generator": "^13.0.0",
+        "@storybook/addon-docs": "^8.2.9",
         "@storybook/addon-essentials": "^8.0.5",
         "@storybook/addon-interactions": "^8.0.5",
         "@storybook/addon-links": "^8.0.5",
         "@storybook/addon-onboarding": "^8.0.5",
         "@storybook/addon-themes": "^8.0.5",
         "@storybook/blocks": "^8.0.5",
+        "@storybook/builder-vite": "^8.2.9",
         "@storybook/react": "^8.0.5",
         "@storybook/react-vite": "^8.0.5",
         "@storybook/test": "^8.2.7",
-        "@storybook/builder-vite": "^8.2.9",
         "@tanstack/react-table": "^8.12.0",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
