--- a/.github/workflows/test_changelog.yml
+++ b/.github/workflows/test_changelog.yml
@@ -2,7 +2,7 @@ name: Test Changelog Generation
 
 on:
   pull_request:
-    types: [opened, synchronize]
+    branches: [master]
 
 jobs:
   update-changelog:
@@ -22,7 +22,7 @@ jobs:
 
       - name: Generate CHANGELOG.md
         run: |
-          gren changelog --generate --override
+          gren changelog --generate
         env:
           GREN_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -31,9 +31,15 @@ jobs:
 
       - name: Commit the changelog
         run: |
+            # Set up git user
             git config --global user.name "github-actions[bot]"
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
-            git add CHANGELOG.md
-            git commit -m "chore: update CHANGELOG.md for testing"
-            git push
-
+            
+            # Check if there are changes to commit
+            if git diff --exit-code; then
+              echo "No changes to commit"
+            else
+              git add CHANGELOG.md
+              git commit -m "chore: update CHANGELOG.md for testing"
+              git push
+            fi
