--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
         "@storybook/react": "^8.0.5",
         "@storybook/react-vite": "^8.0.5",
         "@storybook/test": "^8.2.7",
-        "@storybook/builder-vite": "^8.2.9",
         "@tanstack/react-table": "^8.12.0",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
@@ -150,6 +149,7 @@
         "@deriv-com/quill-tokens": "^2.0.10",
         "@deriv/quill-icons": "^1.22.10",
         "@headlessui/react": "1.7.18",
+        "@semantic-release/git": "^10.0.1",
         "dayjs": "^1.11.11",
         "react-calendar": "^5.0.0",
         "react-number-format": "^5.4.0",
