chore: update readme

--- a/package.json
+++ b/package.json
@@ -59,10 +59,10 @@
         "@storybook/addon-essentials": "^8.2.9",
         "@storybook/addon-interactions": "^8.2.9",
         "@storybook/addon-links": "^8.2.9",
-        "@storybook/addon-mdx-gfm": "^8.2.9",
         "@storybook/addon-onboarding": "^8.2.9",
         "@storybook/addon-themes": "^8.2.9",
         "@storybook/blocks": "^8.2.9",
+        "@storybook/builder-vite": "^8.2.9",
         "@storybook/react": "^8.2.9",
         "@storybook/react-vite": "^8.2.9",
         "@storybook/test": "^8.2.9",
@@ -157,6 +157,7 @@
         "react-swipeable": "^6.2.1",
         "react-tiny-popover": "^8.0.4",
         "react-transition-group": "4.4.2",
+        "remark-gfm": "^4.0.0",
         "usehooks-ts": "^3.0.2",
         "uuid": "^9.0.1"
     },
