--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@commitlint/cli": "^19.1.0",
         "@commitlint/config-conventional": "^19.2.2",
         "@semantic-release/changelog": "^6.0.3",
+        "@semantic-release/git": "^10.0.1",
         "@semantic-release/github": "^10.0.2",
         "@semantic-release/npm": "^12.0.0",
         "@semantic-release/release-notes-generator": "^13.0.0",
