--- a/.github/workflows/publish_npm_package.yml
+++ b/.github/workflows/publish_npm_package.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
         run: npm audit signatures
       - name: Prepublish
-        run: npm run prepublish
+        run: npm run build
       - name: Run tests and generate coverage report
         run: npm run test:report
       - name: Release
