--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
         "test:update": "jest --updateSnapshot",
         "test:staged": "jest --bail --findRelatedTests",
         "test:report": "jest --collectCoverage",
-        "prepare": "husky install",
-        "extract:var": "node scripts/extract-variables.js",
-        "generate-changelog": "conventional-changelog -p atom -i CHANGELOG.md -s"
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.23.9",
@@ -54,7 +52,6 @@
         "@commitlint/cli": "^19.1.0",
         "@commitlint/config-conventional": "^19.2.2",
         "@semantic-release/changelog": "^6.0.3",
-        "@semantic-release/git": "^10.0.1",
         "@semantic-release/github": "^10.0.2",
         "@semantic-release/npm": "^12.0.0",
         "@semantic-release/release-notes-generator": "^13.0.0",
@@ -85,14 +82,12 @@
         "@zxcvbn-ts/core": "^3.0.4",
         "@zxcvbn-ts/language-common": "^3.0.4",
         "clsx": "^2.1.0",
-        "conventional-changelog-cli": "^5.0.0",
         "downshift": "^8.5.0",
         "eslint": "^8.55.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.5",
         "eslint-plugin-storybook": "^0.8.0",
-        "generate-changelog": "^1.8.0",
         "glob": "^10.3.10",
         "husky": "8.0.0",
         "identity-obj-proxy": "^3.0.0",
