chore: add documentation and upgrade storybook version

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "test:update": "jest --updateSnapshot",
         "test:staged": "jest --bail --findRelatedTests",
         "test:report": "jest --collectCoverage",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "extract:var": "node scripts/extract-variables.js"
     },
     "devDependencies": {
         "@babel/preset-env": "^7.23.9",
@@ -55,17 +56,16 @@
         "@semantic-release/github": "^10.0.2",
         "@semantic-release/npm": "^12.0.0",
         "@semantic-release/release-notes-generator": "^13.0.0",
-        "@storybook/addon-docs": "^8.2.9",
-        "@storybook/addon-essentials": "^8.2.9",
-        "@storybook/addon-interactions": "^8.2.9",
-        "@storybook/addon-links": "^8.2.9",
-        "@storybook/addon-onboarding": "^8.2.9",
-        "@storybook/addon-themes": "^8.2.9",
-        "@storybook/blocks": "^8.2.9",
+        "@storybook/addon-essentials": "^8.0.5",
+        "@storybook/addon-interactions": "^8.0.5",
+        "@storybook/addon-links": "^8.0.5",
+        "@storybook/addon-onboarding": "^8.0.5",
+        "@storybook/addon-themes": "^8.0.5",
+        "@storybook/blocks": "^8.0.5",
         "@storybook/builder-vite": "^8.2.9",
-        "@storybook/react": "^8.2.9",
-        "@storybook/react-vite": "^8.2.9",
-        "@storybook/test": "^8.2.9",
+        "@storybook/react": "^8.0.5",
+        "@storybook/react-vite": "^8.0.5",
+        "@storybook/test": "^8.2.7",
         "@tanstack/react-table": "^8.12.0",
         "@testing-library/jest-dom": "^6.4.2",
         "@testing-library/react": "^14.2.1",
@@ -102,7 +102,7 @@
         "sass": "^1.69.7",
         "sass-loader": "^13.3.3",
         "semantic-release": "^23.0.6",
-        "storybook": "^8.2.9",
+        "storybook": "^8.0.0",
         "ts-jest": "^29.1.2",
         "typescript": "^5.2.2",
         "vite": "^5.2.12",
@@ -157,7 +157,6 @@
         "react-swipeable": "^6.2.1",
         "react-tiny-popover": "^8.0.4",
         "react-transition-group": "4.4.2",
-        "remark-gfm": "^4.0.0",
         "usehooks-ts": "^3.0.2",
         "uuid": "^9.0.1"
     },
