--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
         "prettier": "3.2.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "remark-gfm": "^4.0.0",
         "rimraf": "^6.0.1",
         "sass": "^1.69.7",
         "sass-loader": "^13.3.3",
